data/all_generated_tests/raw_wast_tests/br_table_IncorrectBranchTargetResolution_2030.wast
;; 1. **Unmatched Arity with Default Target:**    - Create a `br_table` with multiple label indices and a default target where the default target has a different arity than the other labels. This checks if matching failure appropriately redirects to the default target.    - *Testing for*: Arity mismatch detection between labels and default target.    - *Constraint*: Operand type sequence consistency.

(assert_invalid
  (module
    (func
      (block (result i32)
        (br_table 0 0 1 (i32.const 0) (i32.const 42))
      )
    )
  )
  "type mismatch"
)